fixed vertical alignmnet of the rainbow icons

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body{
 }
 
 .icon{
-  width: 25px;
+  height: 22px;
+  vertical-align: text-top
 }
 
 h1 {
